Added font import

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* fonts
+@import url('https://fonts.googleapis.com/css?family=Special+Elite');
 
-vars
+body {
+  font-family: 'Special Elite', cursive;
+}
 
-style
-*/
