--- a/style.css
+++ b/style.css
@@ -1,6 +1,48 @@
 @import url('https://fonts.googleapis.com/css?family=Special+Elite');
 
+$white: #fff;
+$bg-color: rgb(222,232,232);
+$font-size: 2em;
+
 body {
+  background-color: $bg-color;
+}
+
+#header {
+  display: grid;
+  justify-content: center;
   font-family: 'Special Elite', cursive;
+  font-size: $font-size;
+  margin: auto;
+  width: 70%;
+  margin-top: 20px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 50% 50%; 
+}
+
+#leftArea {
+  height: 70vh;
+  flex-grow: 1;
+}
+
+#rightArea {
+  @extend #leftArea;
+  overflow: auto;
+  background-color: $white;
+  border: 0.25px solid grey;
+}
+
+#editor {
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  overflow: auto;
+}
+
+#preview {
+  padding: 1em;
 }
 
